# DF

./: dfTest.ipynb  pyproject.toml
Researchpaper/: information.txt  paper.tex  reference.bib
project/: config.py  inference.py  train.py
project/data/: cbct_dataset.py  px_dataset.py
project/losses/: adversarial_loss.py  cycle_loss.py  structural_loss.py
project/models/: discriminator2d.py  discriminator3d.py  encoder2d.py  encoder3d.py  nerf_decoder.py  projection.py
project/utils/: geometry.py  preprocessing.py
report/: main.tex  references.bib
